package com.projects.DataManagement;

public enum FoodType {

    JUNK, DESSERT, GRAIN, VEGETABLE, FRUIT, DAIRY
}
