@startuml

title __YONATAN_MIZRAHI'S_30%_PROJECT.APP's Class Diagram__\n

  namespace com.projects.DataManagement {
    class com.projects.DataManagement.FoodItem {
    }
  }
  

  namespace com.projects.DataManagement {
    enum FoodType {
    }
  }
  

  namespace com.projects.DataManagement {
    class com.projects.DataManagement.MenuAdapter {
    }
  }
  

  namespace com.projects.DataManagement {
    class com.projects.DataManagement.MenuHelperDB {
    }
  }
  

  namespace com.projects.DataManagement {
    class com.projects.DataManagement.MenuLoadAdapter {
    }
  }
  

  namespace com.projects.DataManagement {
    class com.projects.DataManagement.User {
    }
  }
  

  namespace com.projects.DataManagement {
    class com.projects.DataManagement.UserHelperDB {
    }
  }
  

  namespace com.projects.Screen1 {
    class com.projects.Screen1.BuildConfig {
    }
  }
  

  namespace com.projects.Screen1 {
    class com.projects.Screen1.MainActivity {
    }
  }
  

  namespace com.projects.Screen1 {
    class com.projects.Screen1.PatternPopup {
    }
  }
  

  namespace com.projects.Screen1 {
    class com.projects.Screen1.StarterGuide {
    }
  }
  

  namespace com.projects.Screen2 {
    class com.projects.Screen2.DailyCalcFragment {
    }
  }
  

  namespace com.projects.Screen2 {
    class com.projects.Screen2.FoodFragment {
    }
  }
  

  namespace com.projects.Screen2 {
    class com.projects.Screen2.FoodRecyclerItem {
    }
  }
  

  namespace com.projects.Screen2 {
    class com.projects.Screen2.HomeScreen {
    }
  }
  

  namespace com.projects.Screen2 {
    class com.projects.Screen2.MenuFragment {
    }
  }
  

  namespace com.projects.Screen2 {
    class com.projects.Screen2.MydataFragment {
    }
  }
  

  namespace com.projects.Screen2 {
    class com.projects.Screen2.SectionsPagerAdapter {
    }
  }
  

  namespace com.projects.Screen2 {
    class com.projects.Screen2.SportFragment {
    }
  }
  

  com.projects.DataManagement.FoodItem o-- com.projects.DataManagement.FoodType : type
  com.projects.DataManagement.MenuAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.projects.DataManagement.MenuHelperDB -up-|> android.database.sqlite.SQLiteOpenHelper
  com.projects.DataManagement.MenuLoadAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.projects.DataManagement.User o-- com.projects.DataManagement.User.Gender : gender
  com.projects.DataManagement.User o-- com.projects.DataManagement.User.SportStatus : status
  com.projects.DataManagement.UserHelperDB -up-|> android.database.sqlite.SQLiteOpenHelper
  com.projects.Screen1.MainActivity .up.|> android.view.View.OnClickListener
  com.projects.Screen1.MainActivity .up.|> android.widget.RadioGroup.OnCheckedChangeListener
  com.projects.Screen1.MainActivity .up.|> android.widget.SeekBar.OnSeekBarChangeListener
  com.projects.Screen1.MainActivity .up.|> com.google.android.material.chip.ChipGroup.OnCheckedChangeListener
  com.projects.Screen1.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.projects.Screen1.MainActivity o-- com.projects.DataManagement.UserHelperDB : dbAccess
  com.projects.Screen1.MainActivity o-- com.projects.Screen1.StarterGuide : starterGuide
  com.projects.Screen1.PatternPopup -up-|> android.app.Activity
  com.projects.Screen2.DailyCalcFragment -up-|> androidx.fragment.app.Fragment
  com.projects.Screen2.FoodFragment -up-|> androidx.fragment.app.Fragment
  com.projects.Screen2.FoodRecyclerItem o-- com.projects.DataManagement.FoodItem : foodItem
  com.projects.Screen2.HomeScreen .up.|> com.google.android.material.navigation.NavigationView.OnNavigationItemSelectedListener
  com.projects.Screen2.HomeScreen -up-|> androidx.appcompat.app.AppCompatActivity
  com.projects.Screen2.MenuFragment .up.|> android.view.View.OnClickListener
  com.projects.Screen2.MenuFragment -up-|> androidx.fragment.app.Fragment
  com.projects.Screen2.MenuFragment o-- com.projects.DataManagement.MenuHelperDB : helperDB
  com.projects.Screen2.MydataFragment -up-|> androidx.fragment.app.Fragment
  com.projects.Screen2.SectionsPagerAdapter -up-|> androidx.fragment.app.FragmentPagerAdapter
  com.projects.Screen2.SportFragment -up-|> androidx.fragment.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
